--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -5,3 +5,11 @@ runConfig:
   # Increase this value if you'd like to automatically spin up
   # more instances in response to increased traffic.
   maxInstances: 1
+backend:
+  # The command that starts your application.
+  # This is the same command you'd run to start your app locally.
+  run: npm run start
+  # Specifies the command to build your application. App Hosting
+  # runs this command to produce a production-ready version of your
+  # code, which it then deploys.
+  build: npm run build
